<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="120dp"
    android:layout_height="150dp"
    android:layout_margin="8dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="6dp"
    app:cardBackgroundColor="@android:color/white"
    android:clickable="true"
    android:focusable="true"
    android:background="?android:attr/selectableItemBackground"
    android:contentDescription="@string/function_item_card"
    android:stateListAnimator="@drawable/cardview_click_effect">

<LinearLayout
android:layout_width="match_parent"
android:layout_height="match_parent"
android:gravity="center"
android:orientation="vertical"
android:padding="10dp">

<ImageView
    android:id="@+id/function_icon"
    android:layout_width="60dp"
    android:layout_height="60dp"
    android:scaleType="centerInside"
    android:contentDescription="@string/function_item_icon" /> <!-- Mô tả cho ImageView -->

<TextView
    android:id="@+id/function_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:textColor="@android:color/black"
    android:textSize="14sp"
    android:textStyle="bold"
    android:contentDescription="@string/function_item_title" /> <!-- Mô tả cho TextView -->
</LinearLayout>

    </androidx.cardview.widget.CardView>
