<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="12dp"
    app:cardElevation="6dp">

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="12dp">

        <!-- Tiêu đề -->
        <TextView
            android:id="@+id/txtFunctionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/function_title"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:drawableStart="@android:drawable/ic_menu_info_details"
            android:drawableTint="?attr/colorPrimary" />

        <!-- Phụ đề -->
        <TextView
            android:id="@+id/txtFunctionSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textStyle="normal"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/function_subtitle"
            android:textColor="@android:color/darker_gray"/>
        <ImageView
            android:id="@+id/imgFunctionIcon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_launcher_foreground"
            android:contentDescription="@string/function_icon_desc"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>
